update otp and qr